--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <body>
     <header>
       <a href="/" class="logo">
-        <img src="../img/logo.png" alt="Logo" />
+        <img src="/img/logo.png" alt="Logo" />
       </a>
       <ul class="nav">
         <li>
-          <a href="/map.html">Карта Дог Френдли мест</a>
+          <a href="./map.html">Карта Дог Френдли мест</a>
         </li>
         <li class="first_lvl">
           <a href="/about.html">О Проекте </a>
