--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <a href="/" class="logo">
-        <img src="/img/logo.png" alt="Logo" />
+        <img src="./img/logo.png" alt="Logo" />
       </a>
       <ul class="nav">
         <li>
