--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <a href="/" class="logo">
+      <a href="./index.html" class="logo">
         <img src="./img/logo.png" alt="Logo" />
       </a>
       <ul class="nav">
@@ -20,7 +20,7 @@
           <a href="./map.html">Карта Дог Френдли мест</a>
         </li>
         <li class="first_lvl">
-          <a href="#">О Проекте </a>
+          <a href="./about.html">О Проекте </a>
           <ul class="sub_menu">
             <li class="sub_item">
               <a href="./about.html"> О проекте </a>
@@ -67,7 +67,7 @@
           </ul>
         </li>
         <li>
-          <a href="/news.html">Новости</a>
+          <a href="./news.html">Новости</a>
         </li>
       </ul>
       <!-- Кнопка для открытия меню (бургер) -->
@@ -236,7 +236,7 @@
             Рестораны, кофейнени, парки, груминги, зоомагазины, собачьи
             площадки, ветеринарные клиники и торговые центры уже ждут вас.
           </div>
-          <a href="/map.html" class="btn"> Перейти на карту </a>
+          <a href="./map.html" class="btn"> Перейти на карту </a>
         </div>
         <div class="column">
           <img
@@ -246,8 +246,8 @@
               ./img/main-page/maps-laptop.png 1000w,
               ./img/main-page/maps.png        1296w
             "
-            sizes="(max-width: 760px) 390px,
-            (max-width: 1295px) 834px,
+            sizes="(max-width: 760px),
+            (max-width: 1295px) 1006px,
             1296px"
             alt="Карта"
           />
@@ -500,7 +500,6 @@
               <li>
                 <a href="/"> Контакты </a>
               </li>
-              <a href="/" class="police_lt">Политика конфиденциальности</a>
             </ul>
           </div>
           <div class="column">
