--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
       </a>
       <ul class="nav">
         <li>
-          <a href="/map.html">Карта Дог Френдли мест</a>
+          <a href="./map.html">Карта Дог Френдли мест</a>
         </li>
         <li class="first_lvl">
           <a href="/about.html">О Проекте </a>
@@ -68,7 +68,7 @@
           </ul>
         </li>
         <li>
-          <a href="/news.html">Новости</a>
+          <a href="./news.html">Новости</a>
         </li>
       </ul>
       <!-- Кнопка для открытия меню (бургер) -->
