--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
       <div class="footer">
         <div class="container">
           <div class="column">
-            <a href="/" class="logo">
+            <a href="#" class="logo">
               <img
                 src="./img/logo.png"
                 srcset="./img/logo.png 850w, ./img/white-logo.png 1296w"
@@ -486,16 +486,16 @@
           <div class="column menu">
             <ul>
               <li>
-                <a href="/map.html"> Карта Дог-френдли мест </a>
+                <a href="./map.html"> Карта Дог-френдли мест </a>
               </li>
               <li>
-                <a href="/about.html"> О проекте </a>
+                <a href="./about.html"> О проекте </a>
               </li>
               <li>
-                <a href="/life_with_a_dog.html"> Жизнь с собакой </a>
+                <a href="./life_with_a_dog.html"> Жизнь с собакой </a>
               </li>
               <li>
-                <a href="/news.html"> Новости </a>
+                <a href="./news.html"> Новости </a>
               </li>
               <li>
                 <a href="/"> Контакты </a>
