--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <span class="title_news">
               Открытие площадки для собак в Салават Купере
             </span>
-            <a href="/news-detail.html" class="btn_news"> Подробнее </a>
+            <a href="./news-detail.html" class="btn_news"> Подробнее </a>
           </div>
           <div class="slide">
             <div class="image">
@@ -292,7 +292,7 @@
             <span class="title_news">
               Открытие площадки для собак в Салават Купере
             </span>
-            <a href="/news-detail.html" class="btn_news"> Подробнее </a>
+            <a href="./news-detail.html" class="btn_news"> Подробнее </a>
           </div>
           <div class="slide">
             <div class="image">
@@ -302,7 +302,7 @@
             <span class="title_news">
               Открытие площадки для собак в Салават Купере
             </span>
-            <a href="/news-detail.html" class="btn_news"> Подробнее </a>
+            <a href="./news-detail.html" class="btn_news"> Подробнее </a>
           </div>
           <div class="slide">
             <div class="image">
@@ -312,7 +312,7 @@
             <span class="title_news">
               Открытие площадки для собак в Салават Купере
             </span>
-            <a href="/news-detail.html" class="btn_news"> Подробнее </a>
+            <a href="./news-detail.html" class="btn_news"> Подробнее </a>
           </div>
         </div>
         <img src="./img/icon/potato.svg" alt="" class="potato" />
@@ -323,7 +323,7 @@
           <div class="description">
             Активные сообщества: чаты, площадки, контакты специалистов
           </div>
-          <a href="/residents.html" class="btn-white"> Подробнее </a>
+          <a href="./residents.html" class="btn-white"> Подробнее </a>
           <img src="./img/main-page/dog1.png" class="dog" alt="dog" />
           <img src="./img/main-page/line-dog1.png" class="lines" />
         </div>
@@ -335,7 +335,7 @@
               <li>Попасть на нашу карту дог-френдли мест</li>
             </ul>
           </div>
-          <a href="/entrepreneurs.html" class="btn-black"> Подробнее </a>
+          <a href="./entrepreneurs.html" class="btn-black"> Подробнее </a>
           <img src="./img/main-page/dog2.png" class="dog" alt="dog" />
           <img src="./img/main-page/line-dog2.png" class="lines" />
         </div>
@@ -347,7 +347,7 @@
               <li>Собака и ребёнок</li>
             </ul>
           </div>
-          <a href="/schools-teachers.html" class="btn-white"> Подробнее </a>
+          <a href="./schools-teachers.html" class="btn-white"> Подробнее </a>
           <img src="./img/main-page/dog3.png" class="dog" alt="dog" />
           <img src="./img/main-page/line-dog3.png" class="lines" />
         </div>
