--- a/about.html
+++ b/about.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--Строчка, которая делает магию-->
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="./css/about.css" />
     <link rel="stylesheet" href="./plugins/swiper/swiper-bundle.min.css" />
-
     <title>О Проекте</title>
   </head>
 
