--- a/dog_friendly.html
+++ b/dog_friendly.html
@@ -14,10 +14,10 @@
       </a>
       <ul class="nav">
         <li>
-          <a href="/map.html">Карта Дог Френдли мест</a>
+          <a href="./map.html">Карта Дог Френдли мест</a>
         </li>
         <li class="first_lvl">
-          <a href="/about.html">О Проекте </a>
+          <a href="./about.html">О Проекте </a>
           <ul class="sub_menu">
             <li class="sub_item">
               <a href="./about.html"> О проекте </a>
@@ -64,7 +64,7 @@
           </ul>
         </li>
         <li>
-          <a href="/news.html">Новости</a>
+          <a href="./news.html">Новости</a>
         </li>
       </ul>
       <!-- Кнопка для открытия меню (бургер) -->
@@ -85,7 +85,7 @@
 
         <ul class="popup-nav">
           <li>
-            <a class="mobile" href="/map.html">Карта Дог Френдли мест</a>
+            <a class="mobile" href="./map.html">Карта Дог Френдли мест</a>
           </li>
           <li class="popup-first-lvl active">
             <a href="./life_with_a_dog.html">Жизнь с собакой </a>
@@ -116,7 +116,7 @@
             </ul>
           </li>
           <li class="popup-first-lvl active">
-            <a href="/about.html">О Проекте </a>
+            <a href="./about.html">О Проекте </a>
             <ul class="popup-sub-menu">
               <li>
                 <a href="./about.html">О проекте</a>
@@ -136,10 +136,10 @@
             <a href="#">Прочее</a>
             <ul class="popup-sub-menu">
               <li>
-                <a href="/map.html">Карта Дог Френдли мест</a>
+                <a href="./map.html">Карта Дог Френдли мест</a>
               </li>
               <li>
-                <a href="/news.html">Новости</a>
+                <a href="./news.html">Новости</a>
               </li>
             </ul>
           </li>
@@ -294,16 +294,16 @@
           <div class="column menu">
             <ul>
               <li>
-                <a href="/map.html"> Карта Дог-френдли мест </a>
+                <a href="./map.html"> Карта Дог-френдли мест </a>
               </li>
               <li>
-                <a href="/about.html"> О проекте </a>
+                <a href="./about.html"> О проекте </a>
               </li>
               <li>
-                <a href="/life_with_a_dog.html"> Жизнь с собакой </a>
+                <a href="./life_with_a_dog.html"> Жизнь с собакой </a>
               </li>
               <li>
-                <a href="/news.html"> Новости </a>
+                <a href="./news.html"> Новости </a>
               </li>
               <li>
                 <a href="/"> Контакты </a>
@@ -332,23 +332,7 @@
         </div>
       </div>
     </footer>
-    <script>
-      const simpleCards = document.querySelectorAll(".simple_card");
-      const hardCards = document.querySelectorAll(".hard_card");
-      simpleCards.forEach((el) => {
-        el.addEventListener("click", () => {
-          const attrValue = el.getAttribute("data-href");
-          window.location.replace(attrValue);
-        });
-      });
-      hardCards.forEach((el) => {
-        el.addEventListener("click", () => {
-          const attrValue = el.getAttribute("data-href");
-          window.location.replace(attrValue);
-        });
-      });
-    </script>
-
+    <script src="./js/components/dog_friendly-swiper.js"></script>
     <script src="./js/components/popup.js"></script>
   </body>
 </html>
