--- a/entrepreneurs.html
+++ b/entrepreneurs.html
@@ -18,10 +18,10 @@
       </a>
       <ul class="nav">
         <li>
-          <a href="/map.html">Карта Дог Френдли мест</a>
+          <a href="./map.html">Карта Дог Френдли мест</a>
         </li>
         <li class="first_lvl">
-          <a href="/about.html">О Проекте </a>
+          <a href="./about.html">О Проекте </a>
           <ul class="sub_menu">
             <li class="sub_item">
               <a href="./about.html"> О проекте </a>
@@ -68,7 +68,7 @@
           </ul>
         </li>
         <li>
-          <a href="/news.html">Новости</a>
+          <a href="./news.html">Новости</a>
         </li>
       </ul>
       <!-- Кнопка для открытия меню (бургер) -->
@@ -76,6 +76,7 @@
         <img src="./img/popup-bottom.png" alt="" />
       </div>
     </header>
+
     <!-- Попап меню -->
     <div class="popup-menu" id="popup-menu">
       <div class="popup-menu__content">
@@ -88,7 +89,7 @@
 
         <ul class="popup-nav">
           <li>
-            <a class="mobile" href="/map.html">Карта Дог Френдли мест</a>
+            <a class="mobile" href="./map.html">Карта Дог Френдли мест</a>
           </li>
           <li class="popup-first-lvl active">
             <a href="./life_with_a_dog.html">Жизнь с собакой </a>
@@ -119,7 +120,7 @@
             </ul>
           </li>
           <li class="popup-first-lvl active">
-            <a href="/about.html">О Проекте </a>
+            <a href="./about.html">О Проекте </a>
             <ul class="popup-sub-menu">
               <li>
                 <a href="./about.html">О проекте</a>
@@ -139,10 +140,10 @@
             <a href="#">Прочее</a>
             <ul class="popup-sub-menu">
               <li>
-                <a href="/map.html">Карта Дог Френдли мест</a>
+                <a href="./map.html">Карта Дог Френдли мест</a>
               </li>
               <li>
-                <a href="/news.html">Новости</a>
+                <a href="./news.html">Новости</a>
               </li>
             </ul>
           </li>
@@ -491,7 +492,7 @@
           <div class="title">
             Есть вопросы или предложения?<br />Напиши нам!
           </div>
-          <img src="./img/entrepreneurs/dog-contact-2.png" alt="" />
+          <img src="./img/main-page/form.png" alt="" />
           <div class="phone">
             <span>Номер горячей линии</span>
             <a href="tel:+7 800 555 35 35">+7 800 555 35 35</a>
@@ -534,16 +535,16 @@
           <div class="column menu">
             <ul>
               <li>
-                <a href="/map.html"> Карта Дог-френдли мест </a>
+                <a href="./map.html"> Карта Дог-френдли мест </a>
               </li>
               <li>
-                <a href="/about.html"> О проекте </a>
+                <a href="./about.html"> О проекте </a>
               </li>
               <li>
-                <a href="/life_with_a_dog.html"> Жизнь с собакой </a>
+                <a href="./life_with_a_dog.html"> Жизнь с собакой </a>
               </li>
               <li>
-                <a href="/news.html"> Новости </a>
+                <a href="./news.html"> Новости </a>
               </li>
               <li>
                 <a href="/"> Контакты </a>
@@ -574,98 +575,6 @@
     </footer>
     <script src="./plugins/swiper/swiper-bundle.min.js"></script>
     <script src="./js/components/popup.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        // Инициализация первого слайдера (опыта)
-        const experiences = new Swiper(".experience-wrapper .swiper", {
-          slidesPerView: 1,
-          spaceBetween: 240,
-          navigation: {
-            nextEl: ".experience-wrapper .swiper-button-next",
-            prevEl: ".experience-wrapper .swiper-button-prev",
-          },
-        });
-
-        let materialsSwiper = null;
-        const guidesWrapper = document.querySelector(".guides-wrapper");
-
-        const nextButton = guidesWrapper.querySelector(
-          ".swiper-buttons .swiper-button-next"
-        );
-        const prevButton = guidesWrapper.querySelector(
-          ".swiper-buttons .swiper-button-prev"
-        );
-
-        function initMaterialsSwiper() {
-          const isMobile = window.matchMedia("(max-width: 1296px)").matches;
-          const guidesEl = document.querySelector(".guides");
-
-          if (isMobile && !materialsSwiper) {
-            // Добавляем классы для мобильной версии
-            guidesEl.classList.add("swiper");
-            const innerDiv = guidesEl.querySelector("div");
-            if (innerDiv) innerDiv.classList.add("swiper-wrapper");
-
-            const articles = innerDiv.querySelectorAll("article");
-            articles.forEach((article) => {
-              article.classList.add("swiper-slide");
-            });
-
-            // Инициализируем слайдер
-            materialsSwiper = new Swiper(guidesEl, {
-              slidesPerView: 2.5,
-              spaceBetween: 16,
-
-              breakpoints: {
-                760: {
-                  slidesPerView: 2.5,
-                  spaceBetween: 24,
-                },
-                390: {
-                  slidesPerView: 1.3,
-                  spaceBetween: 24,
-                },
-              },
-
-              navigation: {
-                nextEl: nextButton,
-                prevEl: prevButton,
-              },
-            });
-          } else if (!isMobile && materialsSwiper) {
-            // Уничтожаем слайдер и убираем классы
-            materialsSwiper.destroy(true, true);
-            materialsSwiper = null;
-
-            guidesEl.classList.remove("swiper");
-            const innerDiv = guidesEl.querySelector("div:first-child");
-            innerDiv.classList.remove("swiper-wrapper");
-
-            const articles = innerDiv.querySelectorAll("article");
-            articles.forEach((article) => {
-              article.classList.remove("swiper-slide");
-            });
-          }
-        }
-
-        if (nextButton && prevButton) {
-          window.addEventListener("load", () => {
-            initMaterialsSwiper();
-
-            let resizeTimeout;
-            window.addEventListener("resize", () => {
-              clearTimeout(resizeTimeout);
-              resizeTimeout = setTimeout(initMaterialsSwiper, 100);
-            });
-          });
-        } else {
-          console.error("Кнопки навигации не найдены! Проверьте селекторы:", {
-            nextButton,
-            prevButton,
-            buttonsContainer: guidesWrapper.querySelector(".swiper-buttons"),
-          });
-        }
-      });
-    </script>
+    <script src="./js/components/entrepreneurs-swiper.js"></script>
   </body>
 </html>
