--- a/get-a-pet.html
+++ b/get-a-pet.html
@@ -19,10 +19,10 @@
       </a>
       <ul class="nav">
         <li>
-          <a href="/map.html">Карта Дог Френдли мест</a>
+          <a href="./map.html">Карта Дог Френдли мест</a>
         </li>
         <li class="first_lvl">
-          <a href="/about.html">О Проекте </a>
+          <a href="./about.html">О Проекте </a>
           <ul class="sub_menu">
             <li class="sub_item">
               <a href="./about.html"> О проекте </a>
@@ -69,7 +69,7 @@
           </ul>
         </li>
         <li>
-          <a href="/news.html">Новости</a>
+          <a href="./news.html">Новости</a>
         </li>
       </ul>
       <!-- Кнопка для открытия меню (бургер) -->
@@ -77,6 +77,7 @@
         <img src="./img/popup-bottom.png" alt="" />
       </div>
     </header>
+
     <!-- Попап меню -->
     <div class="popup-menu" id="popup-menu">
       <div class="popup-menu__content">
@@ -89,7 +90,7 @@
 
         <ul class="popup-nav">
           <li>
-            <a class="mobile" href="/map.html">Карта Дог Френдли мест</a>
+            <a class="mobile" href="./map.html">Карта Дог Френдли мест</a>
           </li>
           <li class="popup-first-lvl active">
             <a href="./life_with_a_dog.html">Жизнь с собакой </a>
@@ -120,7 +121,7 @@
             </ul>
           </li>
           <li class="popup-first-lvl active">
-            <a href="/about.html">О Проекте </a>
+            <a href="./about.html">О Проекте </a>
             <ul class="popup-sub-menu">
               <li>
                 <a href="./about.html">О проекте</a>
@@ -140,10 +141,10 @@
             <a href="#">Прочее</a>
             <ul class="popup-sub-menu">
               <li>
-                <a href="/map.html">Карта Дог Френдли мест</a>
+                <a href="./map.html">Карта Дог Френдли мест</a>
               </li>
               <li>
-                <a href="/news.html">Новости</a>
+                <a href="./news.html">Новости</a>
               </li>
             </ul>
           </li>
@@ -272,16 +273,16 @@
           <div class="column menu">
             <ul>
               <li>
-                <a href="/map.html"> Карта Дог-френдли мест </a>
+                <a href="./map.html"> Карта Дог-френдли мест </a>
               </li>
               <li>
-                <a href="/about.html"> О проекте </a>
+                <a href="./about.html"> О проекте </a>
               </li>
               <li>
-                <a href="/life_with_a_dog.html"> Жизнь с собакой </a>
+                <a href="./life_with_a_dog.html"> Жизнь с собакой </a>
               </li>
               <li>
-                <a href="/news.html"> Новости </a>
+                <a href="./news.html"> Новости </a>
               </li>
               <li>
                 <a href="/"> Контакты </a>
@@ -310,22 +311,7 @@
         </div>
       </div>
     </footer>
-    <script>
-      const simpleCards = document.querySelectorAll(".simple_card");
-      const hardCards = document.querySelectorAll(".hard_card");
-      simpleCards.forEach((el) => {
-        el.addEventListener("click", () => {
-          const attrValue = el.getAttribute("data-href");
-          window.location.replace(attrValue);
-        });
-      });
-      hardCards.forEach((el) => {
-        el.addEventListener("click", () => {
-          const attrValue = el.getAttribute("data-href");
-          window.location.replace(attrValue);
-        });
-      });
-    </script>
+    <script src="./js/components/dog_friendly.js"></script>
     <script src="./js/components/popup.js"></script>
   </body>
 </html>
