--- a/map.html
+++ b/map.html
@@ -14,10 +14,10 @@
       </a>
       <ul class="nav">
         <li>
-          <a href="/map.html">Карта Дог Френдли мест</a>
+          <a href="./map.html">Карта Дог Френдли мест</a>
         </li>
         <li class="first_lvl">
-          <a href="/about.html">О Проекте </a>
+          <a href="./about.html">О Проекте </a>
           <ul class="sub_menu">
             <li class="sub_item">
               <a href="./about.html"> О проекте </a>
@@ -64,7 +64,7 @@
           </ul>
         </li>
         <li>
-          <a href="/news.html">Новости</a>
+          <a href="./news.html">Новости</a>
         </li>
       </ul>
       <!-- Кнопка для открытия меню (бургер) -->
@@ -73,6 +73,7 @@
       </div>
     </header>
 
+    <!-- Попап меню -->
     <div class="popup-menu" id="popup-menu">
       <div class="popup-menu__content">
         <div class="popup-menu__header">
@@ -84,7 +85,7 @@
 
         <ul class="popup-nav">
           <li>
-            <a class="mobile" href="/map.html">Карта Дог Френдли мест</a>
+            <a class="mobile" href="./map.html">Карта Дог Френдли мест</a>
           </li>
           <li class="popup-first-lvl active">
             <a href="./life_with_a_dog.html">Жизнь с собакой </a>
@@ -115,7 +116,7 @@
             </ul>
           </li>
           <li class="popup-first-lvl active">
-            <a href="/about.html">О Проекте </a>
+            <a href="./about.html">О Проекте </a>
             <ul class="popup-sub-menu">
               <li>
                 <a href="./about.html">О проекте</a>
@@ -135,10 +136,10 @@
             <a href="#">Прочее</a>
             <ul class="popup-sub-menu">
               <li>
-                <a href="/map.html">Карта Дог Френдли мест</a>
+                <a href="./map.html">Карта Дог Френдли мест</a>
               </li>
               <li>
-                <a href="/news.html">Новости</a>
+                <a href="./news.html">Новости</a>
               </li>
             </ul>
           </li>
@@ -426,16 +427,16 @@
           <div class="column menu">
             <ul>
               <li>
-                <a href="/map.html"> Карта Дог-френдли мест </a>
+                <a href="./map.html"> Карта Дог-френдли мест </a>
               </li>
               <li>
-                <a href="/about.html"> О проекте </a>
+                <a href="./about.html"> О проекте </a>
               </li>
               <li>
-                <a href="/life_with_a_dog.html"> Жизнь с собакой </a>
+                <a href="./life_with_a_dog.html"> Жизнь с собакой </a>
               </li>
               <li>
-                <a href="/news.html"> Новости </a>
+                <a href="./news.html"> Новости </a>
               </li>
               <li>
                 <a href="/"> Контакты </a>
