--- a/residents.html
+++ b/residents.html
@@ -303,8 +303,8 @@
                           <input
                             type="date"
                             name="date"
+                            placeholder="Дата"
                             class="trn-datetime-input"
-                            data-placeholder="Дата"
                           />
                         </div>
                         <div class="input">
