--- a/residents.html
+++ b/residents.html
@@ -305,6 +305,7 @@
                             name="date"
                             placeholder="Дата"
                             class="trn-datetime-input"
+                            data-placeholder="Дата"
                           />
                         </div>
                         <div class="input">
