отдал на проверку

--- a/studying-training.html
+++ b/studying-training.html
@@ -150,7 +150,7 @@
     <div class="content dog_friendly">
       <img
         src="./img/dog-friendly/studing/back.svg"
-        style="position: absolute; z-index: -1; top: 864px"
+        style="position: absolute; z-index: -1; top: 864px; right: 0"
         alt="/"
       />
       <div class="head_page">
